--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/News/news.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/News/news.cshtml
@@ -7,8 +7,6 @@
 }
 
 @section Styles{
-    <link href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="~/newsEditor/minified/themes/default.min.css">
     <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.css" rel="stylesheet">
 
@@ -55,8 +53,7 @@
             <h2 class="mt-3">公告管理</h2>
         </div>
         <div class="col-6 text-end mt-3">
-            <button class="btn btn-primary" data-bs-toggle="modal" href="#addNewsModalToggle"
-                    role="button">
+            <button class="create_btn" data-bs-toggle="modal" href="#addNewsModalToggle" role="button">
                 新增公告
             </button>
         </div>
@@ -281,7 +278,7 @@
                 {
                     "data": "announcementImageHeader",
                     "render": function (data, type, row) {
-                        return `<img class="img-thumbnail" src="${data}">`;
+                        return `<img src="${data}" width="150px">`;
                     }
                 },
                 { "data": "announcementTypeId" },
