--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/ProductReview/ProductReview.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/ProductReview/ProductReview.cshtml
@@ -6,8 +6,6 @@
 }
 
 @section Styles{
-    <link href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         /* 原始圖片的視窗 */
         .image-popup {
@@ -211,8 +209,7 @@
                     "render": function (data, type, row) {
                         var deleteUrl = '@Url.Action("Delete", "ProductReview", new { area = "AdminCMS", id = "productReviewId" })';
                         deleteUrl = deleteUrl.replace('productReviewId', row.productReviewId);
-                        return `<button class="edit-button" data-id="${row.productReviewId}" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="fas fa-edit"></i></button> |
-                                                                        <a href="${deleteUrl}" onclick="return confirm('確定要刪除嗎?')"><i class="fas fa-trash-alt"></i></a>`;
+                        return `<button class="btn edit-button" data-id="${row.productReviewId}" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="fas fa-edit"></i></button>|<a href="${deleteUrl}" onclick="return confirm('確定要刪除嗎?')" class="btn"><i class="fas fa-trash-alt"></i></a>`;
                     }
                 }
             ]
