--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/myCss.css
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/myCss.css
@@ -371,3 +371,11 @@ background-color:#EDD8C0 ;
 .checokoutbtn {
     color: #ffffff
 }
+
+/* 自訂錯誤訊息的文字顏色 */
+.error-message-color {
+    color: red !important;
+    font-size: 15px !important;
+    font-family: 'Dosis', sans-serif;
+    line-height: 1.80857;
+}
