--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/Login.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/Login.cshtml
@@ -67,7 +67,7 @@
                                     <div>
                                         <label for="txtPassword">密碼：</label>
                                         <input type="text" class="form-control" name="txtPassword"
-                                               placeholder="password" value="123" required>
+                                               placeholder="password" value="a12345" required>
                                         <div class="invalid-feedback"> 請輸入密碼 </div>
                                     </div>
                                 </div>
@@ -97,8 +97,21 @@
                                 <div class="mt-2 text-center">
                                     <a>或用其他社群登入</a>
                                 </div>
-                                <div class="mt-3 text-center">
-                                    <a href="#" style="margin:15px">
+                                <div class="mt-3 text-center justify-content-center d-flex">
+                                    <div id="g_id_onload"
+                                         data-client_id="572000494003-padpmen83rqinfo8tjq6d5tu653d69m2.apps.googleusercontent.com"
+                                         data-login_uri="https://localhost:7218/MemberLogin/ValidGoogleLogin"
+                                         data-auto_prompt="false">
+                                    </div>
+                                    <div class="g_id_signin"
+                                         data-type="standard"
+                                         data-size="large"
+                                         data-theme="outline"
+                                         data-text="sign_in_with"
+                                         data-shape="rectangular"
+                                         data-logo_alignment="left">
+                                    </div>
+                                   @* <a href="#" style="margin:15px">
                                         <span><img src="~/images/CatCha/facebook_icon.png"></span>
                                     </a>
                                     <a href="#" style="margin:15px">
@@ -106,7 +119,7 @@
                                     </a>
                                     <a href="#" style="margin:15px">
                                         <span> <img src="~/images/CatCha/twitter.png"></span>
-                                    </a>
+                                    </a>*@
                                 </div>
                             }
                         </div>
