--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/ResetPassword.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/ResetPassword.cshtml
@@ -1,11 +1,7 @@
-﻿@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
-@{
-    ViewData["Title"] = "Login";
+﻿@{
     Layout = null;
 }
-@{
-    string userName = HttpContextAccessor.HttpContext.Session.GetString("ResetPwdUserEmail");
-}
+
 <!DOCTYPE html>
 
 <html>
@@ -54,37 +50,55 @@
             </div>
             <div class="col-6 mt-2">
                 <div class="text-center mt-3" style="font-size:40px">
-                    <a id="loginModalLabel">忘記密碼</a>
+                    <a id="loginModalLabel">重設密碼 </a>
                 </div>
                 <div class="modal-content">
                     <div class="row">
                         <div class="text-center">
-                            <h2 class="mt-3">忘記密碼了嗎?</h2>
-                            <a>請填寫註冊時的電子信箱</a>
-                            <br>
-                            <a>我們將會寄送密碼修改確認信給您</a>
+                            <h2 class="mt-3">收到確認信了吧</h2>
+                            <a>請填寫想設定的新密碼</a>
+
                         </div>
                     </div>
                     <div class="mt-3 row justify-content-md-center">
                         <div class="col-10">
-                            <div id="forgetPasswordPage">
-                                <form id="mailTokenForm">
+                            <div class="">
+                                <form id="resetPwdForm">
                                     <div class="row ">
                                         <div class="mb-3">
-                                            <label for="Email">電子信箱：</label>
-                                            <input type="text" class="form-control" id="Email"
-                                                   placeholder="email" required>
-                                            <div class="invalid-feedback"> 請輸入電子信箱</div>
-                                            @*<input type="hidden" name="__RequestVerificationToken" value="@Html.AntiForgeryToken()"/>*@
+                                            <label for="NewUserPwd">新密碼：</label>
+                                            <input type="text" class="form-control" id="NewUserPwd"
+                                                   placeholder="新密碼" required>
+                                            <div class="invalid-feedback"> 請輸入新密碼</div>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="CheckUserPwd">請再次確認新密碼</label>
+                                            <input type="text" class="form-control" id="CheckUserPwd"
+                                                   placeholder="請再次確認新密碼" required>
+                                            <div class="invalid-feedback"> 請確認新密碼</div>
                                         </div>
                                     </div>
                                     <div class="d-grid gap-2 mt-3">
-                                        <button class="mb-3 btn btn-light" type="button" onclick="SendMailToken()">寄送密碼修改信</button>
-                                    </div>
-                                    <div class="d-flex justify-content-center">
-                                        <a>想起密碼了?</a><a style="color:#0072E3" asp-controller="MemberLogin" asp-action="Login">登入</a>
+                                        <button class="mb-3 btn btn-light" id="resetPwdBtn" type="button">重設密碼</button>
                                     </div>
                                 </form>
+                                <div class="d-flex justify-content-center">
+                                    <a>想起密碼了?</a><a style="color:#0072E3" asp-controller="MemberLogin" asp-action="Login">登入</a>
+                                </div>
+                                <!-- 使用 Bootstrap Modal 樣式，當執行有錯誤時，顯示錯誤訊息 -->
+                                <div class="modal fade" id="ErrorAlert" tabindex="-1" role="dialog">
+                                    <div class="modal-dialog modal-lg" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                                <h4 class="modal-title">錯誤訊息</h4>
+                                            </div>
+                                            <div class="modal-body" id="ErrorMsg" style="overflow-x:auto;width:100%;">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div><!-- /.modal -->
+
                             </div>
                             <!--<div class="modal-footer" class="row gy-4"></div>-->
                         </div>
@@ -113,7 +127,7 @@
                             <h3>訂閱我們獲得最新資訊</h3>
                             <form class="newsletter-box">
                                 <div class="form-group">
-                                    <input class="" type="email" placeholder="請輸入您的電子信箱" />
+                                    <input class="" type="email" name="Email" placeholder="請輸入您的電子信箱" />
                                     <i class="fa fa-envelope"></i>
                                 </div>
                                 <button class="btn hvr-hover" type="submit">立即訂閱</button>
@@ -188,75 +202,75 @@
 
     <a href="#" id="back-to-top" title="Back to top" style="display: none;">&uarr;</a>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- ALL JS FILES -->
     <!--引用Bundle，這樣nav導覽與頁籤就可以使用-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
             crossorigin="anonymous"></script>
     <!--引用分離(Separate)-->
-    @*  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-    crossorigin="anonymous"></script> *@
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"
-            integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ"
-            crossorigin="anonymous"></script>
     <!---->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="~/js/popper.min.js"></script>
-    <script src="~/js/bootstrap.min.js"></script>
     <!-- ALL PLUGINS -->
-    <script src="~/js/jquery.superslides.min.js"></script>
-    <script src="~/js/bootstrap-select.js"></script>
-    <script src="~/js/inewsticker.js"></script>
-    <script src="~/js/bootsnav.js."></script>
-    <script src="~/js/images-loded.min.js"></script>
-    <script src="~/js/isotope.min.js"></script>
-    <script src="~/js/owl.carousel.min.js"></script>
-    <script src="~/js/baguetteBox.min.js"></script>
-    <script src="~/js/form-validator.min.js"></script>
-    <script src="~/js/contact-form-script.js"></script>
-    <script src="~/js/custom.js"></script>
     <!--nav導覽與頁籤使用-->
     <script src="~/js/myScript.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-
     <script>
-        // 這段 JavaScript 用於處理表單提交
-        function SendMailToken() {
-            var form = document.forms["mailTokenForm"];
-            var UserID = form.elements.Email.value;
 
-            // 前端驗證權杖
-            var token = document.getElementsByName("__RequestVerificationToken")[0].value;
+        $('#resetPwdBtn').click(function () {
+            DoResetPwd()
+        })
 
-            // 組合表單資料
+        function DoResetPwd() {
+            var form = document.forms["resetPwdForm"];
+            var newPwd = form.elements["NewUserPwd"].value;
+            var checkPwd = form.elements["CheckUserPwd"].value;
+
+            //var newPwd = document.querySelector('#NewUserPwd').value;
+            //var checkPwd = document.querySelector('#CheckUserPwd').value;
+
+            console.log(newPwd)
+            console.log(checkPwd)
+
+            if (newPwd !== checkPwd) {
+                document.querySelector('#ErrorMsg').innerHTML = "密碼不相符";
+                return;
+            }
+
+            //組合資料
             var postData = {
-                MemberID: UserID
+                NewUserPwd: newPwd,
+                CheckUserPwd: checkPwd,
             };
-            // 使用 Ajax 傳送至後端
-            $.ajax({
-                url: '@Url.Action("SendMailToken", "MemberLogin")',
+
+            console.log(postData)
+
+            var requestOptions = {
                 method: 'POST',
-                dataType: "json",
-                contentType: "application/json",
-                data: JSON.stringify(postData),
-                success: function (response) {
-                    if (response.ErrMsg) {
-                        alert(response.ErrMsg);
-                        return false; // 失敗時返回 false
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify(postData)
+            };
+
+            fetch('@Url.Action("DoResetPwd", "MemberLogin")', requestOptions)
+                .then(function (response) {
+                    if (response.ok) {
+                        return response.json();
+                    } else {
+                        throw new Error('Network response was not ok');
                     }
-                    alert(response.ResultMsg);
-                    return true; // 成功時返回 true
-                },
-                error: function (err) {
-                    $('#ErrorMsg').html(err.responseText);
-                    $('#ErrorAlert').modal('toggle');
-                    return false; // 失敗時返回 false
-                }
-            });
+                })
+                .then(function (data) {
+                    if (data.ErrMsg) {
+                        document.querySelector('#ErrorMsg').innerHTML = data.ErrMsg;
+                    } else {
+                        alert(data.ResultMsg);
+                    }
+                })
+                .catch(function (error) {
+                    document.querySelector('#ErrorMsg').innerHTML = "發生錯誤: " + error.message;
+                });
         }
+
     </script>
 
 </body>
 </html>
+
