--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Membership/Membership.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Membership/Membership.cshtml
@@ -115,7 +115,7 @@
                aria-selected="false">收藏紀錄</a>
         </li>
         <li class="nav-item" role="presentation">
-            <a class="nav-link" id="Complaint-tab" data-bs-toggle="tab" href="#Complaint" role="tab"
+            <a class="nav-link" id="Complaint-tab" data-bs-toggle="tab" href="#Complaint" role="tab" onclick="loadComplaintRecords()"
                aria-selected="false">客訴紀錄</a>
         </li>
         <li class="nav-item" role="presentation">
@@ -820,11 +820,11 @@
                                         <thead class="table-warning text-center">
                                             <tr>
                                                 <th scope="col">客訴編號</th>
-                                                <th scope="col">客訴時間</th>
+                                                <th scope="col">成立日期</th>
                                                 <th scope="col">客訴類型</th>
                                                 <th scope="col">客訴主旨</th>
                                                 <th scope="col">客訴狀態</th>
-                                                <th scope="col">完成時間</th>
+                                                <th scope="col"></th>
                                             </tr>
                                         </thead>
                                         <tbody class="text-left">
@@ -851,28 +851,19 @@
                         <div class="container">
                             <form action="">
                                 <div class="row my-1 ml-2">
-                                    <label>客訴編號: </label>
-                                </div>
-                                <div class="row my-1 ml-2">
-                                    <label>成立日期: </label>
-                                </div>
-                                <div class="row my-1 ml-2">
-                                    <label>客訴類型: </label>
-                                </div>
-                                <div class="row my-1 ml-2">
-                                    <label>客訴主旨: </label>
-                                </div>
-                                <div class="row my-1 ml-2">
                                     <label>客訴內文 </label>
                                     <div class="input-group">
-                                        <textarea class="form-control" aria-label="With textarea"></textarea>
+                                        <textarea class="form-control" aria-label="With textarea" id="compliantContent" rows="4"></textarea>
                                     </div>
                                 </div>
                                 <div class="row my-1 ml-2">
                                     <label>客服回覆 </label>
                                     <div class="input-group">
-                                        <textarea class="form-control" aria-label="With textarea"></textarea>
+                                        <textarea class="form-control" aria-label="With textarea" id="answerContent" rows="4"></textarea>
                                     </div>
+                                </div>
+                                <div class="row my-1 ml-2">
+                                    <label id="answerTime">回覆時間: </label>
                                 </div>
                                 <div class="container">
                                     <div class="row">
@@ -884,8 +875,6 @@
                                         </div>
                                     </div>
                                 </div>
-
-
                             </form>
                         </div>
 
@@ -1036,8 +1025,7 @@
                     })
                         .then(response => {
                             if (response.ok) {
-                                // 這裡要放入新資料
-                                // 像是 $('#summonName').text(data.name);
+                                $('#summonName').text(`會員：${$('#nameInput').val()}`);
                                 return response.text();
                             } else {
                                 throw new Error('連線有誤，請向客服人員聯繫');
@@ -1047,7 +1035,6 @@
                             Swal.fire({
                                 icon: 'success',
                                 title: '修改成功',
-                                // text: '感謝您來信'
                             });
                         })
                         .catch(error => {
@@ -1185,7 +1172,7 @@
                                     confirmButtonText: '關閉',
 
                                 });
-                            }, 1000);
+                            }, 500);
                         })
                         .catch(error => {
                             console.error('Error:', error);
@@ -1489,6 +1476,7 @@
                 },
                 pageLength: 5,
                 lengthMenu: [5, 10, 15],
+                destroy: true,
             });
 
             document.querySelectorAll(`${minDateSelector}, ${maxDateSelector}`).forEach((el) => {
@@ -1534,7 +1522,7 @@
 
         $(document).ready(function () {
 
-            /*
+            
             $.getJSON('@Url.Content("~/membership/GetFavoriteData")', function (data) {
                 var tbody = document.querySelector('#favoriteRecordTable tbody');
 
@@ -1602,7 +1590,7 @@
 
                     deleteLink.addEventListener('click', function () {
                         $.getJSON('@Url.Content("~/membership/DeleteFavoriteProduct?favoriteId=")' + item.favoriteId, function (data) {
-
+                            $('#favoriteRecordTable').DataTable().ajax.reload();
                         });
                     });
 
@@ -1610,6 +1598,7 @@
                     deleteCell.appendChild(deleteDiv);
 
                 });
+
 
                 new DataTable('#favoriteRecordTable', {
                     language: {
@@ -1622,7 +1611,7 @@
 
 
             });
-            */
+            
             
            /*
            function loadFavoriteData() {
@@ -1714,6 +1703,8 @@
             loadFavoriteData();
         */
 
+
+       /*
             function loadFavoriteData() {
                 fetch('@Url.Content("~/membership/GetFavoriteData")')
                     .then(response => response.json())
@@ -1804,7 +1795,7 @@
 
 
             loadFavoriteData();
-
+            */
         });
 
     </script>
@@ -1812,7 +1803,9 @@
     <!--5.載入時，導入客訴紀錄-->
     <script>
 
+        /*
         $(document).ready(function () {
+            
             $.getJSON('@Url.Content("~/membership/GetComplaintCase")', function (data) {
                 var tbody = document.querySelector('#complaintRecordTable tbody');
 
@@ -1825,8 +1818,7 @@
                     row.insertCell().textContent = new Date(item.creationTime).toISOString().split('T')[0];
                     row.insertCell().textContent = item.categoryName;
                     row.insertCell().textContent = item.complaintTitle;
-                    row.insertCell().textContent = item.complaintStatusName;
-                    row.insertCell().textContent = new Date(item.sentTime).toISOString().split('T')[0];
+                    row.insertCell().textContent = "";
 
                 });
 
@@ -1834,6 +1826,66 @@
 
             });
         });
+        */
+
+        function loadComplaintRecords() {
+            $.ajaxSetup({ cache: false });
+            
+            $.getJSON('@Url.Content("~/membership/GetComplaintCase")')
+                .then(function (data) {
+                    var tbody = document.querySelector('#complaintRecordTable tbody');
+                    tbody.innerHTML = '';
+
+                    data.forEach(function (item) {
+                        var row = tbody.insertRow();
+
+                        row.insertCell().textContent = item.complaintCaseId;
+                        row.insertCell().textContent = new Date(item.creationTime).toISOString().split('T')[0];
+                        row.insertCell().textContent = item.categoryName;
+                        row.insertCell().textContent = item.complaintTitle;
+                        row.insertCell().textContent = item.complaintStatusName;
+
+                        var actionCell = row.insertCell();
+
+                        var actionContainer = document.createElement('div');
+                        actionContainer.style.textAlign = 'center'; // 設置文本對齊屬性
+
+                        var viewButton = document.createElement('button');
+                        viewButton.textContent = '客訴內容';
+                        viewButton.classList.add('btn', 'btn-warning', 'btn-sm'); // 添加樣式類
+                        viewButton.addEventListener('click', function () {
+                            $('#ComplaintModal').modal('show');
+                            document.querySelector('#compliantContent').textContent = item.complaintContent;
+
+                            $.getJSON('@Url.Content("~/membership/GetComplaintCaseDetail?complaintcaseid=")' + item.complaintCaseId, function (datas) {
+                                if (datas !== null && datas.length > 0) {
+                                    var detailItem = datas[0];
+                                    document.querySelector('#answerContent').textContent = detailItem.messageRecipientContent;
+
+                                    var dateParts = detailItem.sentTime.split('-');
+                                    var year = parseInt(dateParts[0], 10);
+                                    var month = parseInt(dateParts[1], 10) - 1;
+                                    var day = parseInt(dateParts[2], 10);
+                                    var utcDate = new Date(Date.UTC(year, month, day));
+                                    var formattedDate = utcDate.toISOString().split('T')[0];
+                                    document.querySelector('#answerTime').textContent = "回覆時間: " + formattedDate;
+                                } else {
+                                    document.querySelector('#answerContent').textContent = "無回覆內容";
+                                    document.querySelector('#answerTime').textContent = "無回覆時間";
+                                }
+                            });
+                        });
+
+                        actionContainer.appendChild(viewButton);
+                        actionCell.appendChild(actionContainer);
+                    });
+
+                    initializeDataTableWithDateFilter('#complaintRecordTable', '#complaintMin', '#complaintMax', 1);
+                })
+                .catch(function (error) {
+                    console.error('Error:', error);
+                });
+        }
 
     </script>
 
@@ -1887,9 +1939,12 @@
                     })
                         .then(response => {
                             if (response.ok) {
-                                $('#appealCategorySelect').val('');  // 清空select的值
-                                $('#ComplaintTitle').val('');         // 清空input的值
-                                $('#ComplaintContent').val('');       // 清空textarea的值
+                                $('#appealCategorySelect').val('');
+                                $('#ComplaintTitle').val('');
+                                $('#ComplaintContent').val('');
+
+                                loadComplaintRecords();
+
 
                                 return response.text();
                             } else {
@@ -1903,7 +1958,7 @@
                                 text: '感謝您來信'
                             });
 
-
+                            loadComplaintRecords();
                         })
                         .catch(error => {
                             Swal.fire({
